--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "i18next": "^23.14.0",
     "lucide-react": "^0.445.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
